bug squashed, stateshape is more terse now, had to edit how i was keying into state object

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -7,14 +7,14 @@
   top:35px;
   right: 10px;
   font-size: 15px;
-  background-color: transparent;
+  background-color: black;
   border: solid 1px rgba(218, 217, 217, 0.148);
   border-radius: 6px;
   /* box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.4); */
   /* margin-top: 28px; */
   padding: 5px 0 5px;
   width: 120px;
-  height: 90px;
+  height: 80px;
   z-index: 1;
   color: rgb(255, 253, 253);
   align-items: center;
